[project]
name = "tube-planning"
version = "0.1.0"
authors = [{ name = "Your Name" }]
description = "Planning Tube Lines project"
readme = ""
requires-python = ">=3.10.0"
license = {}
dependencies = ["numpy"]

[project.scripts]
evaluate-proposals = "tube_planning.evaluation:main"

[project.optional-dependencies]
scripts = [
] # Populate this with the packages that your scripts require, but your package does not

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tube_planning*"]
exclude = ["tests*", "docs*"]
